--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="hi">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>सकल शिक्षक समाज - मीरा-भाईंदर</title>
+  <title>सकल शिक्षक समाज-Survey- Mira-Bhayander</title>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&display=swap" rel="stylesheet" />
   <style>
     :root {
       --primary-blue: #002561;
@@ -15,41 +16,58 @@
     }
 
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
       background-color: var(--bg-light);
       margin: 0;
       padding: 40px 0;
       color: var(--text-dark);
-      line-height: 1.5;
       text-align: center;
-      min-height: 100vh;
-      box-sizing: border-box;
+      position: relative;
+      overflow-x: hidden;
+    }
+
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background-image: url("https://www.transparenttextures.com/patterns/waves.png");
+      background-repeat: repeat-x;
+      background-position: center top;
+      background-size: contain;
+      opacity: 0.07;
+      pointer-events: none;
+      z-index: 0;
     }
 
     .container {
-      max-width: 900px;
+      position: relative;
+      max-width: 760px;
       margin: 0 auto;
       background: #ffffff;
-      padding: 40px 50px 50px 50px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+      padding: 45px 45px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
       border-radius: 12px;
+      z-index: 1;
     }
 
     header img {
       width: 100%;
-      max-width: 820px;
+      max-width: 720px;
       height: auto;
       object-fit: contain;
-      margin-bottom: 12px;
+      margin-bottom: 18px;
       border-radius: 8px;
       user-select: none;
     }
 
     header .subtitle {
-      font-size: 2rem;
+      font-size: 2.1rem;
       font-weight: bold;
       color: var(--primary-blue);
-      margin-bottom: 28px;
+      margin-bottom: 24px;
     }
 
     main img.content-image {
@@ -64,81 +82,102 @@
       user-select: none;
     }
 
-    form.signature-form {
-      max-width: 480px;
+    form.signature-form, form#supportForm {
+      font-size: 1.3rem;
+      max-width: 100%;
       margin: 0 auto;
       text-align: left;
     }
 
-    form.signature-form h3 {
+    form#supportForm h3 {
       text-align: center;
       color: var(--primary-blue);
-      margin-bottom: 20px;
-      font-size: 1.8rem;
+      margin-bottom: 36px;
+      font-size: 2.3rem;
       font-weight: 700;
-      letter-spacing: 0.05em;
     }
 
-    form.signature-form label {
+    label {
       display: block;
-      margin-bottom: 8px;
+      margin-bottom: 6px;
       font-weight: 600;
-      font-size: 1.05rem;
-      color: var(--text-dark);
     }
 
-    form.signature-form input[type="text"],
-    form.signature-form input[type="number"],
-    form.signature-form input[type="email"] {
+    input[type="text"],
+    input[type="number"],
+    input[type="email"] {
       width: 100%;
       padding: 14px 16px;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
       border-radius: 6px;
       border: 1px solid var(--border-light);
-      font-size: 1rem;
-      box-sizing: border-box;
+      font-size: 1.15rem;
       background: #fff;
       color: var(--text-dark);
-      transition: border-color 0.3s ease, box-shadow 0.3s ease;
+      box-sizing: border-box;
     }
 
-    form.signature-form input:focus {
+    input:focus {
       border-color: var(--accent-blue);
-      box-shadow: 0 0 8px rgba(0,130,240,0.25);
+      box-shadow: 0 0 8px rgba(0, 130, 240, 0.25);
       outline: none;
     }
 
-    .address-group {
+    .row-flex {
       display: flex;
       gap: 20px;
-      margin-bottom: 20px;
       flex-wrap: wrap;
+      margin-bottom: 10px;
     }
 
-    .address-group .field {
+    .row-flex .field {
       flex: 1;
     }
 
-    form.signature-form button {
+    .row-flex.split-30-70 > .field:first-child {
+      flex: 0 0 30%;
+    }
+    .row-flex.split-30-70 > .field:last-child {
+      flex: 0 0 70%;
+    }
+
+    .radio-group {
+      display: flex;
+      align-items: center;
+      gap: 30px;
+      margin-top: 6px;
+      flex-wrap: nowrap;
+    }
+
+    .consent-checkbox {
+      display: flex;
+      align-items: center;
+      margin: 25px 0 12px 0;
+      font-weight: 700;
+      font-size: 1.5rem;
+      gap: 10px;
+    }
+
+    button {
       width: 100%;
-      padding: 16px 0;
+      padding: 18px 0;
       background-color: var(--primary-blue);
       color: white;
       border: none;
       border-radius: 8px;
-      font-size: 1.15rem;
+      font-size: 1.3rem;
       font-weight: 700;
       cursor: pointer;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
       transition: background-color 0.3s ease, box-shadow 0.3s ease;
       user-select: none;
-      margin-top: 10px;
+      margin-top: 14px;
     }
 
-    form.signature-form button:hover,
-    form.signature-form button:focus {
+    button:hover,
+    button:focus {
       background-color: var(--accent-blue);
-      box-shadow: 0 6px 18px rgba(0,130,240,0.25);
+      box-shadow: 0 6px 18px rgba(0, 130, 240, 0.25);
       outline: none;
     }
 
@@ -153,19 +192,27 @@
       margin: 14px auto 0 auto;
     }
 
-    .consent-checkbox {
-      display: flex;
-      align-items: center;
-      margin: 20px 0 10px 0;
-      font-weight: 600;
-      font-size: 1.05rem;
-      color: var(--text-dark);
-      gap: 8px;
-    }
-
     @keyframes spin {
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
+    }
+
+    .separator {
+      text-align: center;
+      margin: 32px 0 18px 0;
+      font-size: 1.4rem;
+      font-weight: 600;
+      color: var(--primary-blue);
+      user-select: none;
+    }
+
+    #thankYouMessage {
+      display: none;
+      margin-top: 30px;
+      font-size: 1.3rem;
+      font-weight: 700;
+      color: green;
+      text-align: center;
     }
 
     footer {
@@ -173,123 +220,163 @@
       color: var(--text-light);
       margin-top: 40px;
       padding: 18px 10px;
+      border-top: 1px solid var(--border-light);
       max-width: 900px;
       margin-left: auto;
       margin-right: auto;
-      text-align: center;
-      border-top: 1px solid var(--border-light);
+      z-index: 1;
+      position: relative;
     }
 
     @media (max-width: 600px) {
-      body {
-        padding: 30px 0;
-      }
-
       .container {
-        padding: 30px 25px 40px 25px;
+        padding: 30px 20px;
         margin: 0 10px;
       }
 
-      header .subtitle {
-        font-size: 1.6rem;
+      .row-flex,
+      .row-flex.split-30-70 {
+        flex-direction: column;
       }
 
-      .address-group {
+      .radio-group {
         flex-direction: column;
+        align-items: flex-start;
+        gap: 12px;
       }
     }
   </style>
-
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&display=swap" rel="stylesheet" />
 </head>
 
 <body>
   <div class="container">
     <header>
-      <img src="banner.png" alt="सकल शिक्षक समाज बैनर" />
-      <div class="subtitle">मीरा-भाईंदर</div>
+      <img src="banner.png" alt="Sakal Shikshak Samaj Banner" />
+      <div class="subtitle">Mira-Bhayander</div>
     </header>
 
     <main>
-      <img src="content.png" alt="सकल शिक्षक समाज सामग्री" class="content-image" />
+      <img src="content.png" alt="Sakal Shikshak Samaj Content" class="content-image" />
 
-      <form id="supportForm" name="supportForm" class="signature-form">
+      <form id="supportForm" name="supportForm" method="POST" action="https://script.google.com/macros/s/AKfycbxMN6XFm4ZMsmO_wyI973yT0fUvMGiTRT_jqgJwVn_1PxtX0UTP1tFOtCfgDpeb9ZKiZw/exec" target="hidden_iframe">
         <h3>Register Your Support</h3>
 
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required />
+        <!-- Name and Surname in same line -->
+        <div class="row-flex">
+          <div class="field">
+            <label for="firstName">First Name:</label>
+            <input type="text" id="firstName" name="firstName" required />
+          </div>
+          <div class="field">
+            <label for="surname">Surname:</label>
+            <input type="text" id="surname" name="surname" required />
+          </div>
+        </div>
 
-        <label for="age">Age:</label>
-        <input type="number" id="age" name="age" min="18" max="120" required />
+        <!-- Age and Gender inline -->
+        <div class="row-flex">
+          <div class="field">
+            <label for="age">Age:</label>
+            <input type="number" id="age" name="age" min="18" max="120" required />
+          </div>
+          <div class="field">
+            <label>Gender:</label>
+            <div class="radio-group">
+              <label><input type="radio" name="gender" value="Male" required /> Male</label>
+              <label><input type="radio" name="gender" value="Female" required /> Female</label>
+            </div>
+          </div>
+        </div>
 
-        <label for="mobile">Mobile Number:</label>
-        <input type="text" id="mobile" name="mobile" pattern="[0-9]{10}" title="Enter 10 digit mobile number" required />
+        <!-- Mobile and Email inline -->
+        <div class="row-flex">
+          <div class="field">
+            <label for="mobile">Mobile Number:</label>
+            <input type="text" id="mobile" name="mobile" pattern="[0-9]{10}" title="Enter 10 digit mobile number" required />
+          </div>
+          <div class="field">
+            <label for="email">Email ID:</label>
+            <input type="email" id="email" name="email" required />
+          </div>
+        </div>
 
-        <label for="email">Email ID:</label>
-        <input type="email" id="email" name="email" required />
+        <hr style="margin: 28px 0; border: none; border-top: 1px solid #ccc;" />
 
-        <hr style="margin: 30px 0; border: none; border-top: 1px solid #ccc;" />
+        <div class="separator">------------------------ Address Details ------------------------</div>
 
-        <div class="address-group">
+        <!-- Flat and Building -->        
+        <div class="row-flex">
           <div class="field">
             <label for="flat">Flat Number:</label>
             <input type="text" id="flat" name="flat" placeholder="Example: 102" required />
           </div>
           <div class="field">
             <label for="building">Building Number:</label>
-            <input type="text" id="building" name="building" placeholder="Example: B-3" required />
+            <input type="text" id="building" name="building" placeholder="Example: B‑3" required />
           </div>
         </div>
 
         <label for="society">Society Name:</label>
         <input type="text" id="society" name="society" placeholder="Example: Sai Darshan" required />
 
-        <label for="sector">Sector Number:</label>
-        <input type="text" id="sector" name="sector" placeholder="Example: 5" required />
+        <div class="row-flex">
+          <div class="field" style="flex: 0.3;">
+            <label for="sector">Sector Number:</label>
+            <input type="text" id="sector" name="sector" placeholder="5" required />
+          </div>
+          <div class="field" style="flex: 0.7;">
+            <label for="street">Street Name:</label>
+            <input type="text" id="street" name="street" placeholder="Example: Shanti Park Road" required />
+          </div>
+        </div>
 
-        <div style="margin: 10px 0 20px; font-weight: 600;">
-          Mira Road (East), Thane - 401107
+        <div class="row-flex">
+          <label style="margin-bottom: 0;">Area:</label>
+          <div class="radio-group inline-label">
+            <label><input type="radio" name="area" value="Mira Road" required /> Mira Road</label>
+            <label><input type="radio" name="area" value="Bhayander" required /> Bhayander</label>
+          </div>
         </div>
 
         <div class="consent-checkbox">
           <input type="checkbox" id="consent" name="consent" required />
-          <label for="consent">I support</label>
+          <label for="consent">I support this campaign</label>
         </div>
 
         <button type="submit">Submit Support</button>
         <div class="loader" id="loader"></div>
       </form>
+
+      <!-- Hidden iframe to capture the form submission without page reload -->
+      <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
+
+      <!-- Thank you message -->
+      <div id="thankYouMessage">Thank you for your support! Your form has been submitted successfully.</div>
     </main>
   </div>
 
   <footer>
-    &copy; 2025 सकल शिक्षक समाज | मीरा-भाईंदर
+    &copy; 2025 सकल शिक्षक समाज - Mira-Bhayander
   </footer>
 
   <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbyL5VUyINaVinfQfM1BvxJv7zJafBYxshYB7mN38cMzW7lVp_GXXvDvAOKbpfkqt_yT5Q/exec';
-    const form = document.forms['supportForm'];
+    const form = document.getElementById('supportForm');
     const loader = document.getElementById('loader');
+    const thankYouMessage = document.getElementById('thankYouMessage');
+    const iframe = document.getElementById('hidden_iframe');
 
-    form.addEventListener('submit', e => {
-      e.preventDefault();
-      loader.style.display = 'inline-block';
+    // When form submits, show loader and hide thank you message
+    form.addEventListener('submit', () => {
+      loader.style.display = 'block';
+      thankYouMessage.style.display = 'none';
+    });
 
-      fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-        .then(response => {
-          loader.style.display = 'none';
-          if (response.ok) {
-            alert('Thank you! Your support has been recorded.');
-            form.reset();
-          } else {
-            alert('Some error occurred, please try again.');
-          }
-        })
-        .catch(error => {
-          loader.style.display = 'none';
-          alert('Network error: Please try again.');
-          console.error('Error!', error.message);
-        });
+    // When the iframe finishes loading (meaning form submitted), hide loader, show message, reset form
+    iframe.addEventListener('load', () => {
+      loader.style.display = 'none';
+      thankYouMessage.style.display = 'block';
+      form.reset();
+      thankYouMessage.scrollIntoView({ behavior: 'smooth' });
     });
   </script>
 </body>
