--- a/index.html
+++ b/index.html
@@ -6,246 +6,257 @@
   <title>सकल शिक्षक समाज-Survey- Mira-Bhayander</title>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&display=swap" rel="stylesheet" />
   <style>
-    :root {
-      --primary-blue: #002561;
-      --accent-blue: #0082f0;
-      --bg-light: #f8f9fb;
-      --text-dark: #1d1d1f;
-      --text-light: #545454;
-      --border-light: #dfe2e6;
-    }
+	  :root {
+		--primary-blue: #002561;
+		--accent-blue: #0082f0;
+		--bg-light: #f8f9fb;
+		--text-dark: #1d1d1f;
+		--text-light: #545454;
+		--border-light: #dfe2e6;
+	  }
 
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      background-color: var(--bg-light);
-      margin: 0;
-      padding: 40px 0;
-      color: var(--text-dark);
-      text-align: center;
-      position: relative;
-      overflow-x: hidden;
-    }
+	  body {
+		font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+		background-color: var(--bg-light);
+		margin: 0;
+		padding: 30px 0;
+		color: var(--text-dark);
+		text-align: center;
+		position: relative;
+		overflow-x: hidden;
+	  }
 
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background-image: url("https://www.transparenttextures.com/patterns/waves.png");
-      background-repeat: repeat-x;
-      background-position: center top;
-      background-size: contain;
-      opacity: 0.07;
-      pointer-events: none;
-      z-index: 0;
-    }
+	  body::before {
+		content: "";
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100vw;
+		height: 100vh;
+		background-image: url("https://www.transparenttextures.com/patterns/waves.png");
+		background-repeat: repeat-x;
+		background-position: center top;
+		background-size: contain;
+		opacity: 0.07;
+		pointer-events: none;
+		z-index: 0;
+	  }
 
-    .container {
-      position: relative;
-      max-width: 760px;
-      margin: 0 auto;
-      background: #ffffff;
-      padding: 45px 45px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
-      border-radius: 12px;
-      z-index: 1;
-    }
+	  .container {
+		position: relative;
+		max-width: 760px;
+		margin: 0 auto;
+		background: #ffffff;
+		padding: 30px;
+		box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
+		border-radius: 12px;
+		z-index: 1;
+	  }
 
-    header img {
-      width: 100%;
-      max-width: 720px;
-      height: auto;
-      object-fit: contain;
-      margin-bottom: 18px;
-      border-radius: 8px;
-      user-select: none;
-    }
+	  header img {
+		width: 100%;
+		max-width: 720px;
+		height: auto;
+		object-fit: contain;
+		margin-bottom: 18px;
+		border-radius: 8px;
+		user-select: none;
+	  }
 
-    header .subtitle {
-      font-size: 2.1rem;
-      font-weight: bold;
-      color: var(--primary-blue);
-      margin-bottom: 24px;
-    }
+	  header .subtitle {
+		font-size: 2.1rem;
+		font-weight: bold;
+		color: var(--primary-blue);
+		margin-bottom: 24px;
+	  }
 
-    main img.content-image {
-      max-width: 620px;
-      width: 100%;
-      height: auto;
-      margin-bottom: 28px;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      border-radius: 8px;
-      user-select: none;
-    }
+	  main img.content-image {
+		max-width: 620px;
+		width: 100%;
+		height: auto;
+		margin-bottom: 28px;
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		border-radius: 8px;
+		user-select: none;
+	  }
 
-    form.signature-form, form#supportForm {
-      font-size: 1.3rem;
-      max-width: 100%;
-      margin: 0 auto;
-      text-align: left;
-    }
+	  form.signature-form, form#supportForm {
+		font-size: 1.1rem;
+		width: 100%;
+		margin: 0 auto;
+		text-align: left;
+	  }
 
-    form#supportForm h3 {
-      text-align: center;
-      color: var(--primary-blue);
-      margin-bottom: 36px;
-      font-size: 2.3rem;
-      font-weight: 700;
-    }
+	  form#supportForm h3 {
+		text-align: center;
+		color: var(--primary-blue);
+		margin-bottom: 28px;
+		font-size: 2rem;
+		font-weight: 700;
+	  }
 
-    label {
-      display: block;
-      margin-bottom: 6px;
-      font-weight: 600;
-    }
+	  label {
+		display: block;
+		margin-bottom: 6px;
+		font-weight: 600;
+	  }
 
-    input[type="text"],
-    input[type="number"],
-    input[type="email"] {
-      width: 100%;
-      padding: 14px 16px;
-      margin-bottom: 10px;
-      border-radius: 6px;
-      border: 1px solid var(--border-light);
-      font-size: 1.15rem;
-      background: #fff;
-      color: var(--text-dark);
-      box-sizing: border-box;
-    }
+	  input[type="text"],
+	  input[type="number"],
+	  input[type="email"] {
+		width: 100%;
+		padding: 12px 14px;
+		margin-bottom: 12px;
+		border-radius: 6px;
+		border: 1px solid var(--border-light);
+		font-size: 1rem;
+		background: #fff;
+		color: var(--text-dark);
+		box-sizing: border-box;
+	  }
 
-    input:focus {
-      border-color: var(--accent-blue);
-      box-shadow: 0 0 8px rgba(0, 130, 240, 0.25);
-      outline: none;
-    }
+	  input:focus {
+		border-color: var(--accent-blue);
+		box-shadow: 0 0 8px rgba(0, 130, 240, 0.25);
+		outline: none;
+	  }
 
-    .row-flex {
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-      margin-bottom: 10px;
-    }
+	  .row-flex {
+		display: flex;
+		gap: 20px;
+		flex-wrap: wrap;
+		margin-bottom: 10px;
+	  }
 
-    .row-flex .field {
-      flex: 1;
-    }
+	  .row-flex .field {
+		flex: 1;
+	  }
 
-    .row-flex.split-30-70 > .field:first-child {
-      flex: 0 0 30%;
-    }
-    .row-flex.split-30-70 > .field:last-child {
-      flex: 0 0 70%;
-    }
+	  .radio-group {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 20px;
+		margin-top: 4px;
+	  }
 
-    .radio-group {
-      display: flex;
-      align-items: center;
-      gap: 30px;
-      margin-top: 6px;
-      flex-wrap: nowrap;
-    }
+	  .consent-checkbox {
+		display: flex;
+		align-items: center;
+		margin: 25px 0 12px 0;
+		font-weight: 700;
+		font-size: 1.2rem;
+		gap: 10px;
+	  }
 
-    .consent-checkbox {
-      display: flex;
-      align-items: center;
-      margin: 25px 0 12px 0;
-      font-weight: 700;
-      font-size: 1.5rem;
-      gap: 10px;
-    }
+	  button {
+		width: 100%;
+		padding: 16px;
+		background-color: var(--primary-blue);
+		color: white;
+		border: none;
+		border-radius: 8px;
+		font-size: 1.2rem;
+		font-weight: 700;
+		cursor: pointer;
+		box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+		margin-top: 12px;
+	  }
 
-    button {
-      width: 100%;
-      padding: 18px 0;
-      background-color: var(--primary-blue);
-      color: white;
-      border: none;
-      border-radius: 8px;
-      font-size: 1.3rem;
-      font-weight: 700;
-      cursor: pointer;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-      transition: background-color 0.3s ease, box-shadow 0.3s ease;
-      user-select: none;
-      margin-top: 14px;
-    }
+	  button:hover,
+	  button:focus {
+		background-color: var(--accent-blue);
+		box-shadow: 0 6px 18px rgba(0, 130, 240, 0.25);
+		outline: none;
+	  }
 
-    button:hover,
-    button:focus {
-      background-color: var(--accent-blue);
-      box-shadow: 0 6px 18px rgba(0, 130, 240, 0.25);
-      outline: none;
-    }
+	  .loader {
+		display: none;
+		border: 4px solid #f3f3f3;
+		border-top: 4px solid var(--accent-blue);
+		border-radius: 50%;
+		width: 26px;
+		height: 26px;
+		animation: spin 1s linear infinite;
+		margin: 14px auto 0 auto;
+	  }
 
-    .loader {
-      display: none;
-      border: 4px solid #f3f3f3;
-      border-top: 4px solid var(--accent-blue);
-      border-radius: 50%;
-      width: 26px;
-      height: 26px;
-      animation: spin 1s linear infinite;
-      margin: 14px auto 0 auto;
-    }
+	  @keyframes spin {
+		0% { transform: rotate(0deg); }
+		100% { transform: rotate(360deg); }
+	  }
 
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
+	  .separator {
+		text-align: center;
+		margin: 32px 0 18px 0;
+		font-size: 1.2rem;
+		font-weight: 600;
+		color: var(--primary-blue);
+	  }
 
-    .separator {
-      text-align: center;
-      margin: 32px 0 18px 0;
-      font-size: 1.4rem;
-      font-weight: 600;
-      color: var(--primary-blue);
-      user-select: none;
-    }
+	  #thankYouMessage {
+		display: none;
+		margin-top: 24px;
+		font-size: 1.2rem;
+		font-weight: 700;
+		color: green;
+		text-align: center;
+	  }
 
-    #thankYouMessage {
-      display: none;
-      margin-top: 30px;
-      font-size: 1.3rem;
-      font-weight: 700;
-      color: green;
-      text-align: center;
-    }
+	  footer {
+		font-size: 0.9rem;
+		color: var(--text-light);
+		margin-top: 40px;
+		padding: 18px 10px;
+		border-top: 1px solid var(--border-light);
+		max-width: 900px;
+		margin-left: auto;
+		margin-right: auto;
+		z-index: 1;
+		position: relative;
+	  }
 
-    footer {
-      font-size: 0.95rem;
-      color: var(--text-light);
-      margin-top: 40px;
-      padding: 18px 10px;
-      border-top: 1px solid var(--border-light);
-      max-width: 900px;
-      margin-left: auto;
-      margin-right: auto;
-      z-index: 1;
-      position: relative;
-    }
+	  /* 📱 Mobile Optimization */
+	  @media (max-width: 600px) {
+		.container {
+		  padding: 20px 15px;
+		  margin: 0 10px;
+		}
 
-    @media (max-width: 600px) {
-      .container {
-        padding: 30px 20px;
-        margin: 0 10px;
-      }
+		.row-flex {
+		  flex-direction: column;
+		  gap: 12px;
+		}
 
-      .row-flex,
-      .row-flex.split-30-70 {
-        flex-direction: column;
-      }
+		.radio-group {
+		  flex-direction: column;
+		  align-items: flex-start;
+		  gap: 10px;
+		}
 
-      .radio-group {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 12px;
-      }
-    }
-  </style>
+		label {
+		  font-size: 1rem;
+		}
+
+		input[type="text"],
+		input[type="number"],
+		input[type="email"] {
+		  font-size: 1rem;
+		  padding: 12px;
+		}
+
+		button {
+		  font-size: 1.1rem;
+		  padding: 14px;
+		}
+
+		form#supportForm h3 {
+		  font-size: 1.7rem;
+		}
+	  }
+	</style>
+
 </head>
 
 <body>
