--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
         <hr style="margin: 28px 0; border: none; border-top: 1px solid #ccc;" />
 
-        <div class="separator">-------------- Address Details --------------</div>
+        <div class="separator">----------- Address Details -----------</div>
 
         <!-- Flat and Building -->        
         <div class="row-flex">
@@ -392,5 +392,6 @@
   </script>
 </body>
 </html>
+
 
 
