--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
         <div class="row-flex">
           <div class="field" style="flex: 0.3;">
-            <label for="sector">Sector Number:</label>
+            <label for="sector">Sector/Area:</label>
             <input type="text" id="sector" name="sector" placeholder="5" required />
           </div>
           <div class="field" style="flex: 0.7;">
@@ -392,6 +392,7 @@
   </script>
 </body>
 </html>
+
 
 
 
