--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>सकल शिक्षक समाज-Survey- Mira-Bhayander</title>
+  <title>सकल शिक्षक समाज-Survey-मिरा-भाईंदर</title>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&display=swap" rel="stylesheet" />
   <style>
 	  :root {
@@ -64,10 +64,10 @@
 	  }
 
 	  header .subtitle {
-		font-size: 2.1rem;
+		font-size: 1.8rem;
 		font-weight: bold;
 		color: var(--primary-blue);
-		margin-bottom: 24px;
+		margin-bottom: 20px;
 	  }
 
 	  main img.content-image {
@@ -263,7 +263,7 @@
   <div class="container">
     <header>
       <img src="banner.png" alt="Sakal Shikshak Samaj Banner" />
-      <div class="subtitle">Mira-Bhayander</div>
+      <div class="subtitle">मिरा-भाईंदर</div>
     </header>
 
     <main>
@@ -307,13 +307,13 @@
           </div>
           <div class="field">
             <label for="email">Email ID:</label>
-            <input type="email" id="email" name="email" required />
+            <input type="email" id="email" name="email" />
           </div>
         </div>
 
         <hr style="margin: 28px 0; border: none; border-top: 1px solid #ccc;" />
 
-        <div class="separator">----------- Address Details -----------</div>
+        <div class="separator">------------------------ Address Details ------------------------</div>
 
         <!-- Flat and Building -->        
         <div class="row-flex">
@@ -331,10 +331,10 @@
         <input type="text" id="society" name="society" placeholder="Example: Sai Darshan" required />
 
         <div class="row-flex">
-          <div class="field" style="flex: 0.3;">
-            <label for="sector">Sector/Area:</label>
-            <input type="text" id="sector" name="sector" placeholder="5" required />
-          </div>
+			<div class="field" style="flex: 0.3;">
+			  <label for="sector">Sector/Area:</label>
+			  <input type="text" id="sector" name="sector" placeholder="5" required />
+			</div>
           <div class="field" style="flex: 0.7;">
             <label for="street">Street Name:</label>
             <input type="text" id="street" name="street" placeholder="Example: Shanti Park Road" required />
@@ -367,7 +367,7 @@
   </div>
 
   <footer>
-    &copy; 2025 सकल शिक्षक समाज - Mira-Bhayander
+    &copy; 2025 सकल शिक्षक समाज - मिरा-भाईंदर
   </footer>
 
   <script>
@@ -392,7 +392,3 @@
   </script>
 </body>
 </html>
-
-
-
-
